# signalsmith-stretch

./: .gitmodules  CMakeLists.txt  Makefile  README.md  SUPPORT.txt  signalsmith-stretch.h
cmd/: CMakeLists.txt  Makefile  main.cpp
cmd/util/: console-colours.h  memory-tracker.cpp  memory-tracker.h  memory-tracker.hxx  simple-args.h  stop-denormals.h  stopwatch.h  wav.h
dsp/: README.md  common.h  curves.h  envelopes.h  fft.h  perf.h  spectral.h  windows.h
web/: Makefile  README.md  demo.html  index.html  web-wrapper.js
web/demo/: Scope.mjs  index.html
web/emscripten/: compile.sh  main.cpp  main.js  pre.js
web/release/: README.md  SignalsmithStretch.js  SignalsmithStretch.mjs  package.json
web/server/: server.py
